# CCNotify

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  README.md  TESTING.md  ccnotify.py  install.sh  install_helper.py  pyproject.toml  requirements.txt  test_platform.py  uninstall.ps1  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  publish.yml  test.yml
docs/: INSTALL.md  TESTING.md
scripts/: install.ps1
src/ccnotify/: __init__.py  ccnotify.py  i18n.py  install_helper.py
tests/: README.md  run_tests.py  test_enhancements.py  test_prompt_tracker.py
