[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ccnotify"
version = "0.1.0"
description = "Desktop notifications for Claude Code - alerts when Claude needs input or completes tasks"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ["claude", "notifications", "desktop", "alerts", "productivity"]
authors = [
    { name = "CCNotify Contributors" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = [
    "plyer>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/dazuiba/CCNotify"
Repository = "https://github.com/dazuiba/CCNotify"
Issues = "https://github.com/dazuiba/CCNotify/issues"
Documentation = "https://github.com/dazuiba/CCNotify#readme"

[tool.uv]
# UV-specific configuration
dev-dependencies = []

[tool.setuptools]
# Since this is a script-based tool, we don't need to specify packages
py-modules = ["ccnotify"]

