[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ccnotify"
version = "0.1.0"
description = "Desktop notifications for Claude Code - alerts when Claude needs input or completes tasks"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ["claude", "notifications", "desktop", "alerts", "productivity"]
authors = [
    { name = "CCNotify Contributors" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = [
    "plyer>=2.0.0",
    "rich>=13.0.0",
]

[project.scripts]
ccnotify-configure = "ccnotify.install_helper:auto_configure"

[project.urls]
Homepage = "https://github.com/dazuiba/CCNotify"
Repository = "https://github.com/dazuiba/CCNotify"
Issues = "https://github.com/dazuiba/CCNotify/issues"
Documentation = "https://github.com/dazuiba/CCNotify#readme"
Changelog = "https://github.com/dazuiba/CCNotify/blob/main/CHANGELOG.md"

[tool.setuptools]
# Use src layout
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
# Ruff configuration for linting and formatting
line-length = 100
target-version = "py37"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

